[package]
name = "richamster_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"
serde_derive = "1.0.164"
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }
tokio = { version = "1.28.2", features = ["macros"]}
serde_json = "1.0.97"
hmac-sha256 = "1.1.7"
hex = "0.4.3"
secrecy = "0.8.0"
time = { version = "0.3.22", features = ["serde", "serde-well-known", "parsing", "formatting"] }
chrono = {version = "0.4.26", features = ["serde"]}
thiserror = "1.0.40"
once_cell = "1.18.0"
percent-encoding = "2.3.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"

[dev-dependencies]
dotenvy = "0.15.7"