[package]
name = "richamster_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_derive = "1.0.219"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
tokio = { version = "1.44.1", features = ["macros"]}
serde_json = "1.0.142"
hmac-sha256 = "1.1.12"
hex = "0.4.3"
secrecy = "0.10.3"
time = { version = "0.3.41", features = ["serde", "serde-well-known", "parsing", "formatting"] }
chrono = {version = "0.4.41", features = ["serde"]}
thiserror = "2.0.14"
once_cell = "1.21.3"
percent-encoding = "2.3.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.27.2"

[dev-dependencies]
dotenvy = "0.15.7"