[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
richamster_api =  { path = ".." }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"]}
tracing-log = "0.1.3"
enum-iterator = "1.4.1"
enum-iterator-derive = "1.2.1"
