[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
richamster_api =  { path = ".." }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"]}
tracing-log = "0.2.0"
enum-iterator = "1.5.0"
enum-iterator-derive = "1.4.0"
